<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent"
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        tools:context=".ui.upload.UploadActivity"
        android:layout_height="wrap_content"
        >
        <!-- Guideline for centering -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />
    
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />
        
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    
        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/preview_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/center_guideline_1"
            app:srcCompat="@drawable/ic_placeholder" />
    
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:padding="16dp"
            android:text="@string/gallery"
            app:icon="@drawable/ic_gallery"
            app:iconSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/center_guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImage" />
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:padding="16dp"
            android:text="@string/camera"
            app:icon="@drawable/ic_camera"
            app:iconSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/center_guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/previewImage" />

        <CheckBox
            android:id="@+id/gps"
            android:layout_width="wrap_content"
            android:layout_marginStart="32dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/use_your_location"
            app:layout_constraintBottom_toTopOf="@+id/layout_add_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera" />
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_add_description"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:minHeight="200dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/description"
            app:cursorColor="?attr/colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gps">

            <com.example.storyapp.ui.customs.CustomEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="top"
                android:minHeight="200dp"
                android:inputType="text|textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            tools:enabled="true"
            android:padding="8dp"
            android:text="@string/submit"
            android:theme="@style/Theme.Design.Light"
            app:icon="@drawable/ic_submit"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/center_guideline_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_add_description"
            />
    
        <View
            android:id="@+id/overlay_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:background="#80000000"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_indicator"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>